# static_flow

./: .gitignore  .gitmodules  AGENTS.md  AGENT_TASKS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  README.zh.md  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  static-flow-frontend-120ec6779a398eab.js  static-flow-frontend-120ec6779a398eab_bg.wasm
.cargo/: config.toml
backend/: .env.example  .env.production  API.md  Cargo.toml  NGINX_HTTPS_GUIDE.md  SERVER_DEPLOYMENT.md  deploy-nginx-https.sh  deploy.sh  nginx-http-only.conf  setup-nginx.sh  staticflow-backend.service
backend/src/: article_request_worker.rs  behavior_analytics.rs  comment_worker.rs  email.rs  geoip.rs  gpt2api_rs.rs  handlers.rs  llm_access_proxy.rs  llm_gateway.rs  main.rs  markdown.rs  memory_profiler.rs  music_wish_worker.rs  public_submit_guard.rs  request_context.rs  routes.rs  seo.rs  state.rs  table_maintenance.rs  upstream_proxy.rs
backend/src/kiro_gateway/: auth_file.rs  billable_multipliers.rs  cache_policy.rs  cache_sim.rs  local_import.rs  machine_id.rs  mod.rs  provider.rs  runtime.rs  scheduler.rs  status_cache.rs  token.rs  types.rs  wire.rs
backend/src/llm_gateway/: accounts.rs  activity.rs  codex_default_instructions.md  instructions.rs  models.rs  request.rs  response.rs  runtime.rs  support.rs  token_refresh.rs  types.rs
backend/src/media_proxy/: forward.rs  handlers.rs
crates/llm-access-anthropic-pool/: Cargo.toml
crates/llm-access-anthropic-pool/src/: lib.rs
crates/llm-access-codex-image/: Cargo.toml
crates/llm-access-codex-image/src/: dispatch.rs  gateway.rs  lib.rs  limiter.rs  logging.rs  main.rs  request.rs  util.rs
crates/llm-access-codex-image/tests/: codex_image_dispatch.rs  codex_image_request.rs
crates/store/: Cargo.toml
crates/store/src/: article_request_store.rs  comments_store.rs  image_vector_maintenance.rs  lancedb_api.rs  lib.rs  music_store.rs  music_wish_store.rs
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  optimize-wasm.sh  package-lock.json  package.json
frontend/gpt2api-app/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/: api.rs  config.rs  hooks.rs  main.rs  media_session.rs  models.rs  music_context.rs  navigation_context.rs  router.rs  seo.rs  utils.rs
frontend/src/components/: admin_local_media_uploads.rs  article_card.rs  audio_player.rs  date_range_picker.rs  error_banner.rs  footer.rs  header.rs  icons.rs  image_with_loading.rs  loading_spinner.rs  mini_player.rs  mod.rs  pagination.rs  persistent_audio.rs  raw_html.rs  scroll_to_top_button.rs  search_box.rs  spotlight.rs  stats_card.rs  stream_chunk_batcher.rs  synced_lyrics.rs  theme_toggle.rs  toc_button.rs  tooltip.rs
frontend/src/i18n/: zh_cn.rs
frontend/src/pages/: admin.rs  admin_ai_stream.rs  admin_article_request_stream.rs  admin_gpt2api_rs.rs  admin_kiro_gateway.rs  admin_llm_gateway.rs  admin_local_media.rs  admin_local_media_player.rs  admin_music_wish_stream.rs  article_detail.rs  article_raw.rs  categories.rs  category_detail.rs  coming_soon.rs  gpt2api_chat.rs  gpt2api_image.rs  gpt2api_login.rs  gpt2api_public_shared.rs  home.rs  kiro_access.rs  latest_articles.rs  llm_access.rs  llm_access_guide.rs  llm_access_shared.rs  llm_access_usage.rs  mod.rs  music_library.rs  music_player.rs  not_found.rs  posts.rs  search.rs  tag_detail.rs  tags.rs
frontend/standalone/: github-wrapped-2025.html
frontend/static/: local_media_player_bridge.js  styles.css
frontend/tests/: local_media_player_bridge.test.mjs
llm-access/: Cargo.toml
llm-access-codex/: Cargo.toml
llm-access-codex/src/: anthropic_messages.rs  continuation.rs  conversation_normalizer.rs  instructions.rs  lib.rs  models.rs  request.rs  response.rs  types.rs
llm-access-codex/src/request/: chat_completions.rs  headers.rs  last_message.rs  mod.rs  native_responses.rs  normalization.rs  path.rs  policy.rs  prepare.rs  tools.rs
llm-access-kiro/: Cargo.toml
llm-access-kiro/src/: auth_file.rs  billable_multipliers.rs  cache_sim.rs  config.rs  lib.rs  status.rs  token.rs  wire.rs
llm-access-kiro/src/anthropic/: converter.rs  mod.rs  stream.rs  types.rs  websearch.rs
llm-access-kiro/src/cache_sim/: canonicalize.rs  hashing.rs  mod.rs  prefix_tree.rs  projection.rs  tests.rs  tokenize.rs
llm-access-migrator/: Cargo.toml
llm-access-migrator/src/: lib.rs  snapshot.rs
llm-access-store/: Cargo.toml
llm-access-store/src/: duckdb.rs  lib.rs  main.rs  postgres.rs  repository.rs  request_cache.rs  sqlite.rs  usage_catalog.rs
llm-access-store/src/duckdb/: append.rs  catalog.rs  connection.rs  detail.rs  filter_options.rs  latency.rs  metrics.rs  prune.rs  query.rs  repository.rs  retention.rs  rollup.rs  segment.rs  sql.rs  tests.rs  util.rs
llm-access-store/src/postgres/: cache.rs  codex_account.rs  config.rs  groups.rs  keys.rs  kiro_account.rs  mod.rs  proxy.rs  public.rs  review.rs  routes.rs  routing.rs  status.rs  tests.rs  usage.rs
llm-access/src/: admin.rs  codex_anchor.rs  codex_refresh.rs  codex_status.rs  config.rs  kiro.rs  kiro_refresh.rs  kiro_status.rs  lib.rs  main.rs  provider.rs  public.rs  routes.rs  runtime.rs  seed_staticflow.rs  submission.rs  support.rs  usage_journal.rs  usage_query.rs  usage_worker.rs
llm-access/src/admin/: auth.rs  codex_accounts.rs  config.rs  groups.rs  keys.rs  kiro_accounts.rs  mod.rs  proxy.rs  review_queue.rs  tests.rs  usage.rs  util.rs
llm-access/src/provider/: client.rs  codex_config.rs  codex_dispatch.rs  codex_headers.rs  codex_models.rs  codex_retry.rs  codex_sse.rs  codex_usage.rs  entry.rs  errors.rs  kiro_dispatch.rs  kiro_error.rs  kiro_media.rs  kiro_payload.rs  kiro_request_headers.rs  kiro_session_affinity.rs  kiro_summary.rs  kiro_usage.rs  limiter.rs  mod.rs  routing.rs  tests.rs  usage_meta.rs  util.rs
shared/: Cargo.toml
shared/src/: article_request_store.rs  comments_store.rs  embedding.rs  image_vector_maintenance.rs  interactive_store.rs  lancedb_api.rs  lib.rs  music_store.rs  music_wish_store.rs  optimize.rs  runtime_logging.rs
(+1267 files in other folders)
