[package]
name = "static-flow-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
static-flow-shared = { path = "../shared" }
