[package]
name = "static-flow-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
flate2 = "1.1"
maxminddb = "0.27"
async-stream = "0.3"
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
url = "2.5"
urlencoding = "2.1"
pulldown-cmark = "0.12"
better_mimalloc_rs = { workspace = true }
static-flow-shared = { path = "../shared" }
