[package]
name = "static-flow-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
flate2 = "1.1"
maxminddb = "0.27"
async-stream = "0.3"
eventsource-stream = "0.2"
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
url = "2.5"
urlencoding = "2.1"
pulldown-cmark = "0.12"
better_mimalloc_rs = { workspace = true }
better_mimalloc_sys = { version = "0.1.1", default-features = false, features = ["extended"] }
backtrace = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
memory-stats = "1.2"
rustc-demangle = "0.1"
static-flow-shared = { path = "../shared" }
base64 = "0.22.1"
bytes = "1.10"
crc = "3.3"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.18", features = ["v4"] }
