[package]
name = "static-flow-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# 使用 workspace 级别的依赖版本
yew = { workspace = true }
yew-router = { workspace = true }
gloo-net = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Storage", "Document", "Element"] }
js-sys = { workspace = true }
pulldown-cmark = { workspace = true }
