[package]
name = "llm-access-migrator"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
default = []
staticflow-source = ["dep:static-flow-shared"]

[dependencies]
anyhow = { workspace = true }
llm-access-store = { path = "../llm-access-store" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
static-flow-shared = { path = "../shared", optional = true }
