[package]
name = "llm-access"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
llm-access-core = { path = "../llm-access-core" }
llm-access-store = { path = "../llm-access-store" }
serde = { workspace = true }
tokio = { workspace = true }
