[package]
name = "llm-access"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
llm-access-codex = { path = "../llm-access-codex" }
llm-access-core = { path = "../llm-access-core" }
llm-access-kiro = { path = "../llm-access-kiro" }
llm-access-store = { path = "../llm-access-store" }
lettre = { version = "0.11", default-features = false, features = ["builder"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
