[package]
name = "llm-access"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
default = ["duckdb-prebuilt"]
duckdb-prebuilt = ["duckdb-runtime"]
duckdb-runtime = ["llm-access-store/duckdb-runtime"]
duckdb-bundled = ["llm-access-store/duckdb-bundled"]

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
axum = { workspace = true }
base64 = "0.22.1"
chrono = { workspace = true }
eventsource-stream = "0.2"
futures-util = "0.3"
llm-access-codex = { path = "../llm-access-codex" }
llm-access-core = { path = "../llm-access-core" }
llm-access-kiro = { path = "../llm-access-kiro" }
llm-access-store = { path = "../llm-access-store" }
lettre = { version = "0.11", default-features = false, features = ["builder"] }
rand = "0.8"
reqwest = { workspace = true, features = ["stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
static-flow-shared = { path = "../shared" }
static-flow-runtime = { path = "../runtime" }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
