[package]
name = "static-flow-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
fastembed = "5"
futures = "0.3"
lance = { workspace = true }
lancedb = { workspace = true }
rand = "0.8"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
