[package]
name = "llm-access-anthropic-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
